update on components, added shapes for components

--- a/src/scss/_root.scss
+++ b/src/scss/_root.scss
@@ -107,6 +107,10 @@
 
   --component-border-width-base: #{$component-border-width-base};
 
+  --component-border-radius-base: #{$component-border-radius-base};
+  --component-border-radius-square: #{$component-border-radius-square};
+  --component-border-radius-rounded: #{$component-border-radius-rounded};
+
   --component-font-size-base: #{$component-font-size-base};
 
   --component-font-size-xs: #{$component-font-size-xs};
