--- a/src/scss/components/badge/_variables.scss
+++ b/src/scss/components/badge/_variables.scss
@@ -1,5 +1,8 @@
-$badge-border-radius: var(--border-radius-base) !default;
-$badge-border-width : var(--component-border-width-base) !default;
-$badge-font-weight  : var(--font-weight-bold) !default;
+$badge-border-width:
+var(--component-border-width-base) !default;
 
-$badge-sizes: ('xs', 'sm') !default;
+$badge-font-weight:
+var(--font-weight-bold) !default;
+
+$badge-sizes: ("xs", "sm") !default;
+$badge-shapes: ("base", "square", "rounded") !default;
