--- a/src/scss/utilities/_components.scss
+++ b/src/scss/utilities/_components.scss
@@ -7,6 +7,12 @@ General */
   width: 100%;
 }
 
+@each $name, $props in $component-shapes-map {
+  .component-shape-#{$name} {
+    @include map-props-mixin($props);
+  }
+}
+
 /*
 ========================================
 Sizing */
@@ -22,7 +28,6 @@ Sizing */
     @include map-props-mixin($props);
   }
 }
-
 
 @each $name, $props in $component-height-sizing-map {
   .component-height-#{$name} {
@@ -52,38 +57,22 @@ Sizing */
 ========================================
 Styles */
 
-@each $name in $component-styles {
+@each $name in $component-colors {
   @if ($name != "") {
-    .component-#{$name} {
+    .component-color-#{$name} {
       @include component-style-mixin($name);
     }
 
-    .component-#{$name}-subtle {
+    .component-color-#{$name}-subtle {
       @include component-style-subtle-mixin($name);
     }
 
-    .component-hover-#{$name} {
-      @include component-style-hover-mixin($name);
-    }
+    // .component-hover-#{$name} {
+    //   @include component-style-hover-mixin($name);
+    // }
 
-    .component-active-#{$name} {
-      @include component-style-active-mixin($name);
-    }
-  }
-}
-
-@each $name in $component-styles {
-  @if ($name != "") {
-    .component-#{$name} {
-      @include component-style-mixin($name);
-    }
-
-    .component-hover-#{$name} {
-      @include component-style-hover-mixin($name);
-    }
-
-    .component-active-#{$name} {
-      @include component-style-active-mixin($name);
-    }
+    // .component-active-#{$name} {
+    //   @include component-style-active-mixin($name);
+    // }
   }
 }
