--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -5,6 +5,7 @@
 @import "avatar";
 @import "badge";
 @import "button";
+@import "close";
 @import "form";
 @import "form-control";
 @import "input-group";
