--- a/src/scss/components/alert/_base.scss
+++ b/src/scss/components/alert/_base.scss
@@ -1,9 +1,27 @@
 .alert {
+  @include typography-mixin(
+    (
+      color: 'inherit'
+    )
+  );
+
   border-radius: $alert-border-radius;
   border-style: solid;
   border-width: $alert-border-width;
   box-sizing: border-box;
-  display: flex;
-  font-size: $alert-font-size;
-  padding: $alert-padding-y $alert-padding-x;
+  display: inline-flex;
+}
+
+.alert-title {
+  + * {
+
+  }
+}
+
+@each $size in $alert-sizes {
+  .alert-size-#{$size} {
+    @include map-props-mixin(map-get($component-font-sizing, $size));
+
+    @include map-props-mixin(map-get($component-padding-sizing, $size));
+  }
 }
