--- a/src/scss/components/button/_variables.scss
+++ b/src/scss/components/button/_variables.scss
@@ -1,9 +1,6 @@
-$btn-border-width: var(--component-border-width-base);
-$btn-border-radius: var(--border-radius-base);
-$btn-font-size: var(--component-font-size-base);
-$btn-font-weight: var(--font-weight-bold);
-$btn-height: var(--component-size-base);
-$btn-padding-x: var(--component-space-base);
-$btn-padding-y: 0;
+$button-border-width       : var(--component-border-width-base) !default;
+$button-font-weight        : var(--font-weight-bold) !default;
+$button-transition-duration: var(--transition-duration-base) !default;
 
-$btn-transition-duration: var(--transition-duration-base);
+$button-sizes              : ("base", "xs", "sm", "md", "lg") !default;
+$button-shapes             : ("base", "rounded") !default;
