--- a/src/scss/variables/_components.scss
+++ b/src/scss/variables/_components.scss
@@ -1,4 +1,4 @@
-$component-brightness-base: 8% !default;
+$component-brightness-base: 16% !default;
 
 $component-brightness-hover: $component-brightness-base * 2 !default;
 $component-brightness-active: $component-brightness-base * 3 !default;
@@ -7,14 +7,15 @@ $component-border-width-base: 1px;
 
 // typography
 
-$component-font-scale: 1.333 !default; // Perfect Fourth
-$component-font-size-base: 1rem !default;
+$component-font-scale: 1.2 !default; // Minor Third
+$component-font-size-base: 1em !default;
 
-$component-font-size-xxs: $component-font-size-base / ($component-font-scale * $component-font-scale * $component-font-scale) !default;
-$component-font-size-xs: $component-font-size-base / ($component-font-scale * $component-font-scale) !default;
+$component-font-size-xs: $component-font-size-base /
+  ($component-font-scale * $component-font-scale) !default;
 $component-font-size-sm: $component-font-size-base / ($component-font-scale) !default;
 $component-font-size-md: $component-font-size-base * ($component-font-scale) !default;
-$component-font-size-lg: $component-font-size-base * ($component-font-scale * $component-font-scale) !default;
+$component-font-size-lg: $component-font-size-base *
+  ($component-font-scale * $component-font-scale) !default;
 
 // shapes
 
@@ -23,31 +24,28 @@ $component-border-radius-rounded: 50rem;
 
 // sizing
 
-$component-size-base: 48px;
+$component-size-base: 40px;
 
-$component-size-xxs: 16px;
 $component-size-xs: 24px;
 $component-size-sm: 32px;
-$component-size-md: 56px;
-$component-size-lg: 64px;
+$component-size-md: 48px;
+$component-size-lg: 56px;
 
 // spacing
 
 $component-space-base: 1em !default;
 
-$component-space-xxs: $component-space-base * 0.25 !default;
 $component-space-xs: $component-space-base * 0.5 !default;
 $component-space-sm: $component-space-base * 0.75 !default;
-$component-space-md: $component-space-base * 1.5 !default;
-$component-space-lg: $component-space-base * 2.25 !default;
+$component-space-md: $component-space-base * 1.25 !default;
+$component-space-lg: $component-space-base * 1.5 !default;
 
 $component-gap-base: 1em !default;
 
-$component-gap-xxs: $component-gap-base * 0.25 !default;
 $component-gap-xs: $component-gap-base * 0.5 !default;
-$component-gap-sm: $component-gap-base * 0.75 !default;
-$component-gap-md: $component-gap-base * 1.5 !default;
-$component-gap-lg: $component-gap-base * 2.25 !default;
+$component-gap-sm: $component-gap-base * 0.675 !default;
+$component-gap-md: $component-gap-base * 1.25 !default;
+$component-gap-lg: $component-gap-base * 1.5 !default;
 
 // maps
 
@@ -64,9 +62,6 @@ $component-colors: (
 $component-font-sizing: (
   "base": (
     "font-size": $component-font-size-base,
-  ),
-  "xxs": (
-    "font-size": $component-font-size-xxs,
   ),
   "xs": (
     "font-size": $component-font-size-xs,
@@ -86,9 +81,6 @@ $component-gap-sizing: (
   "base": (
     "gap": $component-gap-base,
   ),
-  "xxs": (
-    "gap": $component-gap-xxs,
-  ),
   "xs": (
     "gap": $component-gap-xs,
   ),
@@ -106,9 +98,6 @@ $component-gap-sizing: (
 $component-height-sizing: (
   "base": (
     "height": $component-size-base,
-  ),
-  "xxs": (
-    "height": $component-size-xxs,
   ),
   "xs": (
     "height": $component-size-xs,
@@ -128,9 +117,6 @@ $component-margin-sizing: (
   "base": (
     "margin": $component-space-base,
   ),
-  "xxs": (
-    "margin": $component-space-xxs,
-  ),
   "xs": (
     "margin": $component-space-xs,
   ),
@@ -148,9 +134,6 @@ $component-margin-sizing: (
 $component-padding-sizing: (
   "base": (
     "padding": $component-space-base,
-  ),
-  "xxs": (
-    "padding": $component-space-xxs,
   ),
   "xs": (
     "padding": $component-space-xs,
@@ -170,10 +153,6 @@ $component-padding-x-sizing: (
   "base": (
     "padding-left": $component-space-base,
     "padding-right": $component-space-base,
-  ),
-  "xxs": (
-    "padding-left": $component-space-xxs,
-    "padding-right": $component-space-xxs,
   ),
   "xs": (
     "padding-left": $component-space-xs,
@@ -198,10 +177,6 @@ $component-padding-y-sizing: (
     "padding-bottom": $component-space-base,
     "padding-top": $component-space-base,
   ),
-  "xxs": (
-    "padding-bottom": $component-space-xxs,
-    "padding-top": $component-space-xxs,
-  ),
   "xs": (
     "padding-bottom": $component-space-xs,
     "padding-top": $component-space-xs,
@@ -224,10 +199,6 @@ $component-size-sizing: (
   "base": (
     "height": $component-size-base,
     "width": $component-size-base,
-  ),
-  "xxs": (
-    "height": $component-size-xxs,
-    "width": $component-size-xxs,
   ),
   "xs": (
     "height": $component-size-xs,
@@ -253,5 +224,5 @@ $component-shapes: (
   ),
   "rounded": (
     "border-radius": $component-border-radius-rounded,
-  )
+  ),
 ) !default;
