--- a/src/scss/components/alert/_variables.scss
+++ b/src/scss/components/alert/_variables.scss
@@ -1,7 +1,4 @@
 $alert-border-radius: var(--border-radius-base);
 $alert-border-width: var(--component-border-width-base);
 
-// $alert-title-spacer:
-
-
-$alert-sizes: ("base", "xs", "sm", "md", "lg") !default;
+$alert-sizes: ("sm") !default;
