--- a/src/scss/components/badge/_base.scss
+++ b/src/scss/components/badge/_base.scss
@@ -4,12 +4,13 @@
   border-width: $badge-border-width;
   box-sizing: border-box;
   display: inline-flex;
-  font-weight: $badge-font-weight;
   vertical-align: middle;
 }
 
 .badge-icon {
+  display: inline-flex;
   height: 100%;
+  min-height: 1em;
 
   svg {
     height: 100%;
@@ -41,11 +42,8 @@
 @each $size in $badge-sizes {
   .badge-size-#{$size} {
     @include map-props-mixin(map-get($component-font-sizing, $size));
-
     @include map-props-mixin(map-get($component-gap-sizing, $size));
-
     @include map-props-mixin(map-get($component-height-sizing, $size));
-
     @include map-props-mixin(map-get($component-padding-sizing, $size));
   }
 
