--- a/src/scss/components/button/_variables.scss
+++ b/src/scss/components/button/_variables.scss
@@ -1,6 +1,5 @@
-$button-border-width       : var(--component-border-width-base) !default;
-$button-font-weight        : var(--font-weight-bold) !default;
+$button-border-width: var(--component-border-width-base) !default;
 $button-transition-duration: var(--transition-duration-base) !default;
 
-$button-sizes              : ("base", "xs", "sm", "md", "lg") !default;
-$button-shapes             : ("base", "rounded") !default;
+$button-sizes: ("base", "sm", "md") !default;
+$button-shapes: ("base", "rounded") !default;
